--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
   "dependencies": {
     "express": "3.1.0",
     "jade": "*",
-    "mongoose": "~3.6.2"
+    "mongoose": "~3.6.2",
+    "coffee-script": "~1.6.2"
+  },
+  "devDependencies": {
+    "grunt": "~0.4.1",
+    "grunt-contrib-handlebars": "~0.5.8"
   }
 }
